# octodns-inwx

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
octodns_inwx/: __init__.py  provider.py
octodns_inwx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_provider.py
