[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "octodns-inwx"
version = "0.1.5"
description = "First-class octoDNS provider for INWX"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "octodns>=1.18.0",
  "inwx-domrobot>=3.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
